Ryddet i kode og fikset code smells